@@ -2,20 +2,14 @@ package ar.edu.unlp.info.oo2.ejercicio_4;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-public class SimilarStrategy implements SuggestionStrategy {
+public class SimilarStrategy extends SuggestionStrategy {
 
-	@Override
-	public List<Movie> suggestMovies(Decoder d) {
-		List<Movie> moviesNotPlayedSortedByNewest = d.getMovies().stream()
-				.filter(m -> !(d.getPlayedMovies().contains(m)))
-				.toList()
-					.stream()
-					.sorted(Comparator.comparing(Movie::getReleaseYear).reversed())
-					.toList();
-			
-		return moviesNotPlayedSortedByNewest.stream()
-				.filter(m -> m.getSimilarMovies().stream().anyMatch(aux -> aux.getSimilarMovies().contains(m))).limit(3).toList();
+	protected Stream<Movie> apply(List<Movie> l) {
+					return l.stream().sorted(Comparator.comparing(Movie::getReleaseYear).reversed())
+					.collect(Collectors.toList()).stream().filter(m -> m.getSimilarMovies().stream().anyMatch(aux -> aux.getSimilarMovies().contains(m)));
 				
 	}
 }
